<resources>
    <string name="app_name">legendary-fiesta</string>
    <string name="navbar_my_list">My Moods</string>
    <string name="navbar_friends_list">Friends\' Moods</string>
    <string name="navbar_add_post">Add Mood Event</string>
    <string name="navbar_friends">Friends</string>
    <string name="navbar_profile">Profile</string>
    <string name="login_error_toast">Unable to sign you in: %d</string>
    <string name="login_error_cancelled">You need to sign in to use this app</string>
    <string name="add_post_greeting">How are you feeling?</string>
    <string name="add_post_date_button">Date</string>
    <string name="add_post_time_button">Time</string>
    <string name="user_name_button">Username</string>
    <string name="add_post_cancel_button">Cancel</string>
    <string name="add_post_done_button">Done</string>
    <string name="add_post_description_hint">Describe your feeling (Maximum 20 characters).</string>

    <string name="spinner_empty">None</string>

    <string name="event_delete_success">Event Deleted Successfully</string>
    <string name="event_delete_fail">Could not delete event, please try again</string>

    <string-array name="social_conditions">
        <item>Single</item>
        <item>Pair</item>
        <item>Small Group</item>
        <item>Crowd</item>
    </string-array>

    <string name="mood_neutral">Neutral</string>
    <string name="mood_happy">Happy</string>
    <string name="mood_angry">Angry</string>
    <string name="mood_sad">Sad</string>
    <string name="mood_disgusted">Disgusted</string>
    <string name="mood_scared">Scared</string>
    <string name="mood_surprised">Surprised</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_logging_in">Signing In…</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_username">Username</string>
    <string name="login_bio">Bio</string>
    <string name="login_date">Birthday</string>
    <string name="login_invalid_date">The date is invalid</string>
    <string name="login_no_date">Birth Date cannot be empty</string>
    <string name="login_no_username">Username cannot be empty</string>
    <string name="login_username_whitespace">Username cannot have whitespaces</string>
    <string name="log_out_button">Log Out</string>
    <string name="add_post_location_button">Location</string>
    <string name="birth_date_button_text">Birthdate</string>
    <string name="max_char_text">(Maximum 100 characters)</string>
    <string name="search_input_text">Search</string>

    <string name="title_activity_follower_request">FollowerRequestActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="following_list">Following</string>
</resources>
