<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/greetingView"
        style="@style/WhiteText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_post_greeting"
        android:textSize="@dimen/default_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetingView">

        <RadioButton
            android:id="@+id/icon_neutral"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_weight="0"
            android:adjustViewBounds="true"
            android:background="@drawable/icon_neutral_70px"
            android:button="@null"
            android:scaleX="0.9"
            android:scaleY="0.9" />

        <RadioButton
            android:id="@+id/icon_happy"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_weight="0"
            android:background="@drawable/icon_happy_70px"
            android:button="@null"
            android:scaleX="0.9"
            android:scaleY="0.9" />

        <RadioButton
            android:id="@+id/icon_surprised"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_weight="0"
            android:background="@drawable/icon_surprised_70px"
            android:button="@null"
            android:scaleX="0.9"
            android:scaleY="0.9" />

        <RadioButton
            android:id="@+id/icon_angry"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_weight="0"
            android:background="@drawable/icon_angry_70px"
            android:button="@null"
            android:scaleX="0.9"
            android:scaleY="0.9" />

        <RadioButton
            android:id="@+id/icon_scared"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_weight="0"
            android:background="@drawable/icon_scared_70px"
            android:button="@null"
            android:scaleX="0.9"
            android:scaleY="0.9" />

        <RadioButton
            android:id="@+id/icon_disgusted"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_weight="0"
            android:background="@drawable/icon_disgusted_70px"
            android:button="@null"
            android:scaleX="0.9"
            android:scaleY="0.9" />

        <RadioButton
            android:id="@+id/icon_sad"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/icon_sad_70px"
            android:button="@null"
            android:scaleX="0.9"
            android:scaleY="0.9" />

    </RadioGroup>

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_post_date_button"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@+id/date_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/date_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/date_picker_button"
        app:layout_constraintEnd_toStartOf="@+id/time_picker_button"
        app:layout_constraintStart_toEndOf="@+id/date_picker_button" />

    <Button
        android:id="@+id/time_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/add_post_time_button"
        android:textSize="13sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/date_edittext"
        app:layout_constraintEnd_toStartOf="@+id/time_edittext" />

    <EditText
        android:id="@+id/time_edittext"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintBaseline_toBaselineOf="@+id/time_picker_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/description_edittext"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/add_post_description_hint"
        android:inputType="textPersonName"
        android:textColor="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_picker_button" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add_post_cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add_post_done_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

